V2.3/后端文档/后端开发文档历史.md
**4/11**

**Version:2.3.2**

+ 删除了**analyze.py**，其所有内容现在并到**static.py**中

+ views.py里删除了**get_group_statistics()**，**detail()**，它们的内容现在并到**get_jobinfo()**中

+ 现在用户可以下载他们的对应简历

+ views.py中加入以下新函数:

  >**get_session_value()**
  >
  >**welcome()**
  >
  >**profileDownload()**
>
  >**sort_salary_median()**

  修改过的函数:
  
  >**profile()**
  >
  >**get_jobinfo()**
  >
  >**dashboard()**
  >
  >**sendTableData()**
  
+ dashboard.py中加入以下新函数:

  >**get_msal_and_offer()**

  ​	修改过的函数:

  >**offerNumberIncreaseTop5InMonth()**

  

---

**3/09**

**Version:2.2**

+ 加入了新的功能文件**dashboard.py**
+ **dashboard()**的内容增加
+ 修改了文档的组织结构

---

**3/02**

**Version:2.1**

+ 加入了**新的数据库定义**,现在支持用户**注册登陆**了

+ 加入了**职业匹配功能**

+ 加入了以下新模块:

   > **1.login_auth()  ##装饰器**
   > **2.page_not_found()**
   > **3.login()**
   > **4.logout()** 
   > **5.register()**
   > **6.profile()**
   > **7.dashboard()**
   > **8.recommand()**
   > **9.sendTableData()**
  
+ **get_group_statistics**模块优化

**1/09**

### Version:1.1

+ 修改了**框架映射**定义，现在**数据库定义**分离成一个新文档

+ 加入了以下的**新模块**：

  > **1.detail()**
  >
  > **2.get_groupByOneFeature()**
  >
  > **3.get_groupByTwoFeatures()**

___



**11/28**

### Version:1.0

+ **get_jobinfo()**现在将接受jobName,page这2个新参数以此来支持前端分页功能
+ 对**get_group_statistics()**的返回结果进行了改变，为了方便前端的echarts使用，现在的返回值是data(一个二维列表)

---

**11/22** 

### Version:0.01(旧版本写法)

- 建立***数据库定义***和***框架映射***定义

- 加入了**2**个**新模块**:
				
> **1.get_jobinfo()**
>
> **2.get_companyType_stats()**				
> 	
> 	

